--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     
-    <title>Document</title>
+    <title>RifP - Home</title>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
         <img src="img/test.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        Bootstrap
+        RifP
     </a>
     </nav>
 
@@ -36,8 +36,11 @@
             <td>Mark</td>
             <td>Otto</td>
             <td>@mdasdasdasdasdasdasdo</td>
-            <td><button type="button" class="btn btn-warning">Sortear</button>
-                <button type="button" class="btn btn-primary">Ver boletos</button>
+            <td>
+              <button type="button" class="btn btn-danger">Eliminar</button>
+              <button type="button" class="btn btn-warning">Sortear</button>
+              <button type="button" class="btn btn-primary">Ver boletos</button>
+                
             </td>
           </tr>
         </tbody>
