Modificacion barra superior
Se modifico la barra superior en los archivos index.html y ver_boletos.html para corregir un detalle en la barra superior que contiene el logo y el nombre de la aplicacion.

--- a/ver_boletos.html
+++ b/ver_boletos.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 
-    <!-- Image and text -->
+    <!-- Barra superior con logo y nombre de la aplicación -->
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-        <img src="img/test.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        Bootstrap
-    </a>
+      <a class="navbar-brand" href="#">
+        <img src="public/img/test.png" width="30" height="30" class="d-inline-block align-top" alt="Logo de RifP">
+        RifP
+      </a>
     </nav>
 
     <table class="table">
